create admin view and add routes too

--- a/frontend/src/app/admin/admin.component.html
+++ b/frontend/src/app/admin/admin.component.html
@@ -11,7 +11,7 @@
               </div>
               <!--/Image-->
 
-              <h3 class="title">Seller Name</h3>
+              <h3 class="title">Admin Dashboard</h3>
               <p class="category">Description</p>
             </div>
             
@@ -20,13 +20,13 @@
                         <a href="#button" class="btn btn-primary btn-lg btn-round">View Messages</a>
                   </div>
                   <div class="social-description">
-                        <a href="#button" class="btn btn-primary btn-lg btn-round">Sales History</a>
+                        <a href="#button" class="btn btn-primary btn-lg btn-round">Site Settings</a>
                   </div>
             </div>
             <div>
               <div class="social-description">
-                  <h2>3.8</h2>
-                  <p>Rating</p>
+                  <!-- <h2>3.8</h2>
+                  <p>Rating</p> -->
             </div>
             </div>
             
