--- a/frontend/src/app/components/selling/selling.component.html
+++ b/frontend/src/app/components/selling/selling.component.html
@@ -1,71 +1,29 @@
-<div class="page-header" filter-color="orange">
-  <div class="page-header-image" style="background-image:url(assets/img/login.jpg)"></div>
+<div class="page-header">
+
   <div class="container">
     <div class="col-md-4 content-center">
       <div class="card card-login card-plain">
-        <form class="form" method="" action="">
-          <div class="header header-primary text-center">
-            <div class="logo-container">
-              <img src="assets/img/now-logo.png" alt="">
-            </div>
+
+        <form class="form-group" [formGroup]="sellingForm">
+          <div class="header header-primary text-center"> </div>
+          <div>
+            <p>Select category</p>
+            <select class="btn btn-round btn-neutral custom-select form-control" [(ngModel)]="category"
+              formControlName="category">
+              <option *ngFor="let item of categories">{{item}}</option>
+            </select>
           </div>
-
-
-          <div class="form-check form-check-radio black">
-            <label class="form-check-label">
-              <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1">
-              <span class="form-check-sign"></span>
-              Customer
-            </label>
-
-            <label class="form-check-label">
-              <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1">
-              <span class="form-check-sign"></span>
-              Seller
-            </label>
-          </div>
-          <div class="form-check form-check-radio black">
-
-          </div>
-
-
           <div class="content">
-            <div class="input-group form-group-no-border input-lg" [ngClass]="{'input-group-focus':focus===true}">
-              <div class="input-group-prepend">
-                <span class="input-group-text"> <i class="now-ui-icons users_circle-08"></i></span>
-              </div>
-              <input type="text" class="form-control" placeholder="First Name..." (focus)="focus=true"
-                (blur)="focus=false">
-            </div>
-            <div class="input-group form-group-no-border input-lg" [ngClass]="{'input-group-focus':focus1===true}">
-              <div class="input-group-prepend">
-                <span class="input-group-text"><i class="now-ui-icons text_caps-small"></i></span>
-              </div>
-              <input type="text" placeholder="Last Name..." class="form-control" (focus)="focus1=true"
-                (blur)="focus1=false" />
-            </div>
+            <textarea _ngcontent-c15="" class="form-control" cols="80" rows="4" spellcheck="false"
+              [(ngModel)]="textMessage" formControlName="textMessage">
+                        </textarea>
           </div>
+
           <div class="footer text-center">
-            <a href="#pablo" class="btn btn-primary btn-round btn-lg btn-block">Get Started</a>
-          </div>
-          <div class="pull-left">
-            <h6>
-              <a href="#pablo" class="link">Create Account</a>
-            </h6>
-          </div>
-          <div class="pull-right">
-            <h6>
-              <a href="#pablo" class="link">Need Help?</a>
-            </h6>
-
-
-
-
-
-
-
+            <a class="btn btn-primary btn-round btn-lg btn-block" (click)="sell()">Sell</a>
           </div>
         </form>
+
       </div>
     </div>
   </div>
