--- a/frontend/src/app/components/modal/modal.component.html
+++ b/frontend/src/app/components/modal/modal.component.html
@@ -111,7 +111,7 @@
                                     placeholder="email" type="email"
                                     [ngClass]="{'is-invalid':signupForm.get('email').touched && signupForm.get('email').invalid}">
                                 <div class="invalid-feedback">
-                                    <div>Umail is required</div>
+                                    <div>Email is required</div>
                                 </div>
                             </div>
 
