--- a/frontend/src/app/pages/userprofile/customerprofile/customerprofile.component.html
+++ b/frontend/src/app/pages/userprofile/customerprofile/customerprofile.component.html
@@ -6,17 +6,19 @@
       style="background-image: url('assets/img/bg5.jpg') ;">
     </div>
 
+
     <div class="container">
       <div class="content-center">
         <div>
 
           <!--Profile Image-->
           <div class="photo-container">
-            <img src="assets/img/ryan.jpg" alt="">
+            <img _ngcontent-c6="" alt="Thumbnail Image" class="rounded-circle img-raised  w-25 p-3"
+              src="assets/img/ryan.jpg">
           </div>
           <!--/Profile Image-->
 
-          <h3 class="title">Customer</h3>
+          <h3 class="title">{{current_user?.email}}</h3>
         </div>
 
         <div class="row justify-content-center">
