--- a/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
+++ b/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
@@ -12,7 +12,8 @@
 
           <!--Profile Image-->
           <div class="photo-container">
-            <img src="assets/img/ryan.jpg" alt="">
+            <img _ngcontent-c6="" alt="Thumbnail Image" class="rounded-circle img-raised  w-25 p-3"
+              src="assets/img/ryan.jpg">
           </div>
           <!--/Profile Image-->
 
@@ -21,18 +22,161 @@
 
         <div class="row justify-content-center">
           <div class="social-description">
-            <a class="btn btn-primary btn-lg btn-round" routerLink="/userprofile/broadcast">Broadcast</a>
+            <a class="btn btn-primary btn-lg btn-round" routerLink="/userprofile/selling">Selling</a>
           </div>
           <div class="social-description">
-            <a href="#button" class="btn btn-primary btn-lg btn-round">Purchase History</a>
-          </div>
-          <div class="social-description">
-            <a href="#button" class="btn btn-primary btn-lg btn-round">Bookmarks</a>
+            <a href="#button" class="btn btn-primary btn-lg btn-round">Sales History</a>
           </div>
         </div>
       </div>
     </div>
   </div>
+
+  <!-- Ratings and Reviews-->
+
+  <div class="section">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="row">
+            <h3>Ratings and Reviews</h3>
+            <a _ngcontent-c2="" class="btn btn-simple btn-primary btn-round ml-lg-auto"
+              routerLink="/userprofile/RatingsComponent">View
+              More</a>
+          </div>
+          <div class="col-xs-12 col-md-6">
+            <div class="well well-sm">
+              <div class="row">
+                <div class="col-xs-12 col-md-6 text-center">
+                  <h1 class="rating-num">
+                    4.0</h1>
+                  <div class="stars">
+                    <span class="fa fa-star" id="star1" onclick="add(this,1)"></span>
+                    <span class="fa fa-star" id="star1" onclick="add(this,1)"></span>
+                    <span class="fa fa-star" id="star1" onclick="add(this,1)"></span>
+                    <span class="fa fa-star" id="star1" onclick="add(this,1)"></span>
+                    <span class="fa fa-star" id="star1" onclick="add(this,1)"></span>
+                  </div>
+                  <div>
+                    <span class="glyphicon glyphicon-user"></span>1,050,008 total
+                  </div>
+                </div>
+
+                <div class="col-xs-12 col-md-6">
+                  <div class="row rating-desc">
+                    <div class="col-xs-3 col-md-3 text-right">
+                      <span class="glyphicon glyphicon-star"></span>5
+                    </div>
+                    <div class="col-xs-8 col-md-9">
+                      <div class="progress progress-striped">
+                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="20"
+                          aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+                          <span class="sr-only">80%</span>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- end 5 -->
+                    <div class="col-xs-3 col-md-3 text-right">
+                      <span class="glyphicon glyphicon-star"></span>4
+                    </div>
+                    <div class="col-xs-8 col-md-9">
+                      <div class="progress">
+                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="20"
+                          aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+                          <span class="sr-only">60%</span>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- end 4 -->
+                    <div class="col-xs-3 col-md-3 text-right">
+                      <span class="glyphicon glyphicon-star"></span>3
+                    </div>
+                    <div class="col-xs-8 col-md-9">
+                      <div class="progress">
+                        <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20"
+                          aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+                          <span class="sr-only">40%</span>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- end 3 -->
+                    <div class="col-xs-3 col-md-3 text-right">
+                      <span class="glyphicon glyphicon-star"></span>2
+                    </div>
+                    <div class="col-xs-8 col-md-9">
+                      <div class="progress">
+                        <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="20"
+                          aria-valuemin="0" aria-valuemax="100" style="width: 20%">
+                          <span class="sr-only">20%</span>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- end 2 -->
+                    <div class="col-xs-3 col-md-3 text-right">
+                      <span class="glyphicon glyphicon-star"></span>1
+                    </div>
+                    <div class="col-xs-8 col-md-9">
+                      <div class="progress">
+                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80"
+                          aria-valuemin="0" aria-valuemax="100" style="width: 15%">
+                          <span class="sr-only">15%</span>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- end 1 -->
+                  </div>
+                  <!-- end row -->
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card-body col-xs-10 col-md-10">
+            <div class="row">
+              <div class="col-md-2">
+                <img src="https://image.ibb.co/jw55Ex/def_face.jpg" class="img img-rounded img-fluid">
+                <p class="text-secondary text-center">15 Minutes Ago</p>
+              </div>
+              <div class="col-md-10">
+                <div class="clearfix"></div>
+                <p>Lorem Ipsum is simply dummy text of the pr make but also the leap into electronic typesetting,
+                  remaining
+                  essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
+                </p>
+                <p>
+                  <a class="float-right btn btn-outline-primary ml-2"> <i class="fa fa-reply"></i> Reply</a>
+                </p>
+              </div>
+            </div>
+            <div class="card card-inner">
+              <div class="card-body">
+                <div class="row">
+                  <div class="col-md-2">
+                    <img src="https://image.ibb.co/jw55Ex/def_face.jpg" class="img img-rounded img-fluid">
+                    <p class="text-secondary text-center">15 Minutes Ago</p>
+                  </div>
+                  <div class="col-md-10">
+                    <p><a href="https://maniruzzaman-akash.blogspot.com/p/contact.html"><strong>Maniruzzaman
+                          Akash</strong></a>
+                    </p>
+                    <p>
+                      Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including
+                      versions
+                      of Lorem Ipsum.</p>
+                    <p>
+                      <a class="float-right btn btn-outline-primary ml-2"> <i class="fa fa-reply"></i> Reply</a>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- /Ratings and Reviews-->
+
 
 
   <!-- Broadcast Table -->
@@ -40,7 +184,13 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h3>Recent Broadcasts</h3>
+          <div class="container">
+            <div class="row">
+              <h3>Recent Sales</h3>
+              <a _ngcontent-c2="" class="btn btn-simple btn-primary btn-round ml-lg-auto" href="#/examples/profile">View
+                More</a>
+            </div>
+          </div>
           <form>
             <div class="form-group form-inline">
               Search <input class="form-control ml-2" type="text" name="searchTerm">
@@ -88,59 +238,7 @@
   <!-- /Broadcast Table -->
 
 
-  <!-- Recent Table -->
-  <div class="section">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h3>Recent Purchases</h3>
-          <form>
-            <div class="form-group form-inline">
-              Search <input class="form-control ml-2" type="text" name="searchTerm">
 
-            </div>
-
-            <table class="table table-striped">
-              <thead>
-                <tr>
-                  <th scope="col">Number</th>
-                  <th scope="col" sortable="name" (sort)="onSort($event)">Shop Name</th>
-                  <th scope="col" sortable="area" (sort)="onSort($event)">Product</th>
-                  <th scope="col" sortable="message" (sort)="onSort($event)">Messages</th>
-                  <th scope="col">Finalize</th>
-                  <th scope="col">Action</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td scope="row">BC</td>
-                  <td scope="row">BC</td>
-                  <td scope="row">BC</td>
-                  <td scope="row">BC</td>
-                  <td scope="row">BC</td>
-                  <td scope="row">BC</td>
-                </tr>
-              </tbody>
-            </table>
-
-            <div class="d-flex justify-content-between p-2">
-
-
-              <!-- <select class="custom-select" style="width: auto" name="pageSize"
-                                [(ngModel)]="service.pageSize">
-                                <option [ngValue]="2">2 items per page</option>
-                                <option [ngValue]="4">4 items per page</option>
-                                <option [ngValue]="6">6 items per page</option>
-                            </select> -->
-            </div>
-
-          </form>
-
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- /Recent Table -->
 
 
   <footer class="footer footer-default">
