--- a/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
+++ b/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
@@ -241,7 +241,7 @@
                   <td scope="row">BC</td>
                   <td scope="row">BC</td>
                   <td scope="row">BC</td>
-                  <td scope="row">BC</td>
+                  <td scope="row"> <a class="btn btn-primary btn-lg btn-round" routerLink="/userprofile/sellerprofile/ratingform">finalize</a>  </td>
                 </tr>
               </tbody>
             </table>
