admin prof edits

--- a/frontend/src/app/pages/userprofile/customerprofile/customerprofile.component.html
+++ b/frontend/src/app/pages/userprofile/customerprofile/customerprofile.component.html
@@ -84,6 +84,9 @@
           </form>
 
         </div>
+        <div class="social-description">
+          <a class="btn btn-primary btn-lg btn-round" routerLink="/userprofile/admin">Admin profile test</a>
+        </div>
       </div>
     </div>
   </div>
