--- a/frontend/src/app/pages/ratingform/ratingform.component.html
+++ b/frontend/src/app/pages/ratingform/ratingform.component.html
@@ -1,81 +1,119 @@
-<br>
-<br>
-<br>
-<br>
- 
-<div class="container mt-5">
-     
-     
-  
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th>Selling Item</th>
-          <th>Rating</th>
-        </tr>
-      </thead>
-      <tbody>
-         <tr>
-          <td>DELL i5 laptop</td>
-          <td>
-              <ngb-rating [(rate)]="currentRate1">
-                  <ng-template let-fill="fill" let-index="index">
-                    <span class="star" [class.filled]="fill === 100" [class.bad]="index < 3">&#9733;</span>
-                  </ng-template>
-                </ngb-rating>
-                <hr>
-                <pre>Rate: <b>{{currentRate1}}</b></pre>
-          </td>
-        </tr>
-         <tr>
-          <td> Hp laptop i7</td>
-          <td>
-              <ngb-rating [(rate)]="currentRate2">
-                  <ng-template let-fill="fill" let-index="index">
-                    <span class="star" [class.filled]="fill === 100" [class.bad]="index < 3">&#9733;</span>
-                  </ng-template>
-                </ngb-rating>
-                <hr>
-                <pre>Rate: <b>{{currentRate2}}</b></pre>
-          </td>
-        </tr>
-        <tr>
-          <td>AZUS i7</td>
-          <td>
-              <ngb-rating [(rate)]="currentRate3">
-                  <ng-template let-fill="fill" let-index="index">
-                    <span class="star" [class.filled]="fill === 100" [class.bad]="index < 3">&#9733;</span>
-                  </ng-template>
-                </ngb-rating>
-                <hr>
-                <pre>Rate: <b>{{currentRate3}}</b></pre>
-          </td>
-        </tr>
-         <tr>
-          <td>Panasonic TV</td>
-          <td>
-              <ngb-rating [(rate)]="currentRate4">
-                  <ng-template let-fill="fill" let-index="index">
-                    <span class="star" [class.filled]="fill === 100" [class.bad]="index < 3">&#9733;</span>
-                  </ng-template>
-                </ngb-rating>
-                <hr>
-                <pre>Rate: <b>{{currentRate4}}</b></pre>
-          </td>
-        </tr>
-        <tr>
-          <td>SAMSUNG J2 prime phone</td>
-          <td>
-              <ngb-rating [(rate)]="currentRate5">
-                  <ng-template let-fill="fill" let-index="index">
-                    <span class="star" [class.filled]="fill === 100" [class.bad]="index < 3">&#9733;</span>
-                  </ng-template>
-                </ngb-rating>
-                <hr>
-                <pre>Rate: <b>{{currentRate5}}</b></pre>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  
+<div class="stars container" style="padding-top: 15%;">
+    <div class="row" >
+      <div class="col-md-4">
+        <section>
+          <b>Please enter your rating</b>
+          <bar-rating [(rate)]="cssRate" [max]="5"></bar-rating>
+        </section>
+      <br>
+      </div>
+    <div class="row" style="padding-top: 15%;">
+        <form novalidate [formGroup]="feedbackForm" (ngSubmit)="submitFeedbackForm()">
+            <section class="customer-name">
+              <h4>Full Name</h4>
+              <input type="text" placeholder="Enter your name here" formControlName="customerName">
+              <div *ngIf="customerNameChanged" class="errors">
+                <i>{{customerNameControl.value}}</i> is not a valid name
+              </div>
+              <div *ngIf="!customerNameChanged && customerNameControl.value && !customerNameControl.errors">
+                Welcome {{customerNameControl.value}}
+              </div>
+              <div *ngIf="customerNameControl.errors" class="errors">
+                <div *ngIf="customerNameControl.errors.required">
+                  Please enter your name. This is a mandatory field.
+                </div>  
+                <div *ngIf="customerNameControl.errors.minlength">
+                  Please enter atleast {{customerNameControl.errors.minlength.requiredLength}} characters
+                </div>  
+              </div>
+            </section>
+            <section class="gender">
+              <h4>Gender</h4>
+              <ul>
+                <li>
+                  <input id="genderMale" type="radio" name="gender" value="Male" formControlName="gender">
+                  <label for="genderMale">Male</label>
+                </li>
+                <li>
+                  <input id="genderFemale" type="radio" name="gender" value="Female" formControlName="gender">
+                  <label for="genderFemale">Female</label>
+                </li>
+              </ul>
+            </section>
+            <section class="product-purchased">
+              <h4>Product purchased</h4>
+              <label>I own a:</label>
+              <select formControlName="productPurchased">
+                <option value=""></option>
+                <option value="Refrigerator">Refrigerator</option>
+                <option value="Washing Machine">Washing Machine</option>
+                <option Value="tvItem">Telivision</option>
+                <option value="Old Washing Machine">Old Washing Machine</option>
+              </select> 
+            </section>
+              
+              <section>
+                <h4>Product quality</h4>
+                <ul>
+                  <li>
+                    <input id="productQualityAwesome" name="productquality"type="radio" value="Awesome" formControlName="productQuality">
+                    <label for="productQualityAwesome">Awesome</label>
+                  </li>
+                  <li>
+                    <input id="productQualityGood" name="productquality"type="radio" value="Good" formControlName="productQuality">
+                    <label for="productQualityGood">Good</label>
+                  </li>
+                  <li>
+                    <input id="productQualityWorst" name="productquality" type="radio" value="Worst" formControlName="productQuality">
+                    <label for="productQualityWorst">Worst</label>
+                  </li>
+                </ul>
+                <div *ngIf="feedbackForm.errors" class="errors">
+                  <div *ngIf="feedbackForm.errors.relationFail">
+                    Can't give feedback<br> for old product.
+                  </div>
+                </div>
+              </section>
+              <section formGroupName="delivery">
+                <h4>Delivery</h4>
+                <ul>
+                  <li>
+                    <input id="delOnTime" type="checkbox" formControlName="delOnTime">
+                    <label for="delOnTime">On time?</label>
+                  </li>
+                  <li>
+                    <input id="damagedProduct" type="checkbox" formControlName="damagedProduct">
+                    <label for="damagedProduct">Damaged product?</label>
+                  </li>
+                  <li>
+                    <input id="extraCharge" type="checkbox" formControlName="extraCharge">
+                    <label for="extraCharge">Extra charge?</label>
+                  </li>
+                </ul>
+              </section>
+               
+             
+            <section>
+              <h4>Any Suggestions?</h4>
+              <textarea formControlName="suggestions"></textarea>
+            </section>
+            <section class="more-feedbacks" formArrayName="morefeedbacks">
+              <h4>More feedback?</h4>
+              <ul>
+                <li *ngFor="let item of morefeedbacksControls.controls; let i = index">
+                  <input type="text" formControlName="{{i}}">
+                  <button type="button" title="Delete Feedback" (click)="deleteMoreFeedback(i)">Delete</button>
+                </li>
+              </ul>
+              <button type="button" (click)="addMoreFeedback()">Add a Feedback</button>
+            </section>
+            <button type="submit" [disabled]='!feedbackForm.valid'>Submit Feedback</button>
+            <button type="button" (click)="clearForm()">Clear Form</button> 
+          </form> 
+    </div>
+        
+         
+    </div>
+</div>
+      
+      
