--- a/frontend/src/app/pages/ratingform/ratingform.component.scss
+++ b/frontend/src/app/pages/ratingform/ratingform.component.scss
@@ -1,3 +1,10 @@
+
+
+body {
+  background-color: rgb(215, 230, 215);
+}
+
+
 :host {
   display: block;
   padding: 2em;
@@ -11,9 +18,10 @@ ul {
 ul > li {
   margin-bottom: 4px;
 }
-h2 {
+h4 {
   padding: 0;
   margin: 0;
+  font-family: serif;
 }
 form > section {
   margin-bottom: 2em;
@@ -55,7 +63,7 @@ select:focus {
 }
 textarea {
   border: 2px solid #f1f1f1;
-  width: 98%;
+  width: 100%;
   height: 150px;
 }
 select {
@@ -67,7 +75,7 @@ select {
   background-color: transparent;
 }
 input[type=checkbox], input[type=radio] {
-  width: 28px;
+  width: 30px;
   height: 28px;
   position: relative;
   margin: 20px auto;
@@ -88,7 +96,7 @@ button:focus {
   outline: none;
 }
 .customer-name input[type=text] {
-  width: 100%;
+  width: 900px;
   text-transform: uppercase;
 }
 /*.customer-name input[type=text].ng-touched {
@@ -141,7 +149,7 @@ button:disabled {
 }
 .rating-list li {
   float: right;
-  color: #ddd;
+  color:royalblue;
   padding: 10px 5px;
 
 }
