--- a/frontend/src/app/pages/userprofile/customerprofile/customerprofile.component.html
+++ b/frontend/src/app/pages/userprofile/customerprofile/customerprofile.component.html
@@ -18,7 +18,7 @@
           </div>
           <!--/Profile Image-->
 
-          <h3 class="title">{{current_user?.email}}</h3>
+          <h3 class="title">{{current_user?.username}}</h3>
         </div>
 
         <div class="row justify-content-center">
