--- a/frontend/src/app/pages/editprofile/editprofile.component.html
+++ b/frontend/src/app/pages/editprofile/editprofile.component.html
@@ -4,6 +4,7 @@
     <div class="page-header-image rellax-header" data-rellax-speed="-8"
       style="background-image: url('assets/img/bg5.jpg') ;">
     </div>
+
     <div class="container">
       <div class="content-center">
         <div>
@@ -12,6 +13,7 @@
             <img _ngcontent-c6="" alt="Thumbnail Image" class="rounded-circle img-raised w-25 p-3"
               src="assets/img/ryan.jpg">
           </div>
+          <h2>{{current_user?.username}}</h2>
           <!--/Profile Image-->
         </div>
       </div>
@@ -21,61 +23,69 @@
   <div class="section">
     <div class="container">
 
-      <h3>Edit your details</h3>
-      <div class="col-xs-12 col-md-8 col-lg-8">
-        <div class="form-group"><label>Username</label>
-          <input [(ngModel)]="username" formControlName="username" class="form-control border-input" placeholder=""
-            type="text">
-        </div>
+      <div class="social-description align-left">
+        <a href="#button" class="btn btn-primary btn-lg btn-round" routerLink="/userprofile/customerprofile">Back</a>
       </div>
 
-      <div class="col-xs-12 col-md-8 col-lg-8">
-        <div class="form-group"><label>Email</label>
-          <input [(ngModel)]="email" formControlName="email" class="form-control border-input" placeholder=""
-            type="email">
-        </div>
-      </div>
-
-      <div class="col-md-12">
-        <div class="row">
-          <div class="col-sm-6 col-lg-4">
-            <div class="form-group"><label>Password</label>
-              <input [(ngModel)]="password" class="form-control" placeholder="Password" type="password" value=""></div>
-          </div>
-          <div class="col-sm-6 col-lg-4">
-            <div class="form-group"><label>Confirm Password</label>
-              <input [(ngModel)]="cpassword" class="form-control" placeholder="Password" type="password" value=""></div>
+      <form class="form" method="" action="" [formGroup]="editForm">
+        <h3>Edit your details</h3>
+        <div class="col-xs-12 col-md-8 col-lg-8">
+          <div class="form-group"><label>Username</label>
+            <input [(ngModel)]="username" formControlName="username" class="form-control border-input"
+              placeholder="{{current_user?.username}}" type="text">
           </div>
         </div>
-      </div>
-
-      <hr>
-
-      <div class="col-xs-12 col-md-8 col-lg-8">
-        <div class="form-group"><label>Telephone Number</label>
-          <input [(ngModel)]="email" formControlName="email" class="form-control border-input" placeholder=""
-            type="text">
+        <div class="col-xs-12 col-md-8 col-lg-8">
+          <div class="form-group"><label>Email</label>
+            <input [(ngModel)]="email" formControlName="email" class="form-control border-input"
+              placeholder="{{current_user?.email}}" type="email">
+          </div>
         </div>
-      </div>
 
-      <div class="col-xs-12 col-md-8 col-lg-8">
-        <div class="form-group"><label>Address</label>
-          <input [(ngModel)]="email" formControlName="email" class="form-control border-input" placeholder=""
-            type="text">
+        <div class="col-md-12">
+          <div class="row">
+            <div class="col-sm-6 col-lg-4">
+              <div class="form-group"><label>Password</label>
+                <input [(ngModel)]="password" formControlName="password" class="form-control" placeholder="Password"
+                  type="password" value="">
+              </div>
+            </div>
+            <div class="col-sm-6 col-lg-4">
+              <div class="form-group"><label>Confirm Password</label>
+                <input [(ngModel)]="cpassword" formControlName="cpassword" class="form-control"
+                  placeholder="Confirm Password" type="password" value="">
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="form-group">
-          <input [(ngModel)]="email" formControlName="email" class="form-control border-input" placeholder=""
-            type="text">
-        </div>
-        <div class="form-group">
-          <input [(ngModel)]="email" formControlName="email" class="form-control border-input" placeholder=""
-            type="text">
-        </div>
-      </div>
 
+        <hr>
 
+        <div class="col-xs-12 col-md-8 col-lg-8">
+          <div class="form-group"><label>Telephone Number</label>
+            <input [(ngModel)]="telephone" formControlName="telephone" class="form-control border-input"
+              placeholder="{{current_user?.telephone}}" type="text">
+          </div>
+        </div>
+
+        <div class="col-xs-12 col-md-8 col-lg-8">
+          <div class="form-group"><label>Address</label>
+            <input [(ngModel)]="line1" formControlName="line1" class="form-control border-input" placeholder=""
+              type="text">
+          </div>
+          <div class="form-group">
+            <input [(ngModel)]="line2" formControlName="line2" class="form-control border-input" placeholder=""
+              type="text">
+          </div>
+          <div class="form-group">
+            <input [(ngModel)]="line3" formControlName="line3" class="form-control border-input" placeholder=""
+              type="text">
+          </div>
+        </div>
+      </form>
     </div>
   </div>
+
 
   <footer class="footer footer-default">
     <div class="container">
