--- a/frontend/src/app/pages/ratingform/ratingform.component.html
+++ b/frontend/src/app/pages/ratingform/ratingform.component.html
@@ -4,12 +4,15 @@
         <form novalidate [formGroup]="ratingForm" (ngSubmit)="submitFeedbackForm()">
 
             <h2>Rate and Review Form</h2>
+             
+             
+            <!--  -->
             <div class="stars container">
               <div class="row" >
                 <div class="col-md-10">
 
-                  <div class="mt-5">
-                    <h4>Please enter your rating</h4>
+                <div class="mt-5">
+                <h4>Please enter your rating</h4>
                     <div class="row">
                         <div class="col-sm-12">
                             <ul class="list-inline rating-list" 
@@ -22,6 +25,11 @@
                         </div>
                       </div>
                     </div>
+                    <!--  -->
+                    </div> 
+                 </div>
+            </div>
+                    <!--  -->
                     <h4>Please enter your review</h4>
                     <div class="content">
                         <textarea _ngcontent-c15="" class="form-control" cols="80" rows="4" spellcheck="false"
@@ -36,10 +44,10 @@
                           <a class="btn btn-primary btn-round btn-lg btn-block" (click)="clearForm()">Clear Form</a>
                       </div>
                     </div>
-                </div>
+                <!-- </div>
               </div>          
-            </div>       
-          </form> 
+            </div>        -->
+        </form> 
     </div>
   </body> 
          
