--- a/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
+++ b/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
@@ -49,16 +49,17 @@
               <div class="row">
                 <div class="col-xs-12 col-md-6 text-center">
                   <h1 class="rating-num">
-                    4.0</h1>
-                  <div class="stars">
-                    <span class="fa fa-star" id="star1" onclick="add(this,1)"></span>
-                    <span class="fa fa-star" id="star1" onclick="add(this,1)"></span>
-                    <span class="fa fa-star" id="star1" onclick="add(this,1)"></span>
-                    <span class="fa fa-star" id="star1" onclick="add(this,1)"></span>
-                    <span class="fa fa-star" id="star1" onclick="add(this,1)"></span>
-                  </div>
+                    {{this.highestRate | number:'1.0-0'}}</h1>
+                    <div class="stars">
+                      <span class="fa fa-star" id="star1" *ngIf="this.highestRate >= 1" onclick="add(this,1)"></span>
+                      <span class="fa fa-star" id="star1" *ngIf="this.highestRate >= 2" onclick="add(this,1)"></span>
+                      <span class="fa fa-star" id="star1" *ngIf="this.highestRate >= 3" onclick="add(this,1)"></span>
+                      <span class="fa fa-star" id="star1" *ngIf="this.highestRate >= 3" onclick="add(this,1)"></span>
+                      <span class="fa fa-star" id="star1" *ngIf="this.highestRate >= 3" onclick="add(this,1)"></span>
+                      </div>
+                   
                   <div>
-                    <span class="glyphicon glyphicon-user"></span>1,050,008 total
+                    <span class="glyphicon glyphicon-user"></span>{{this.totalRates}} total
                   </div>
                 </div>
 
@@ -70,8 +71,8 @@
                     <div class="col-xs-8 col-md-9">
                       <div class="progress progress-striped">
                         <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="20"
-                          aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-                          <span class="sr-only">80%</span>
+                          aria-valuemin="0" aria-valuemax="100"  [ngStyle]="{'width.%':this.starFivePer }">
+                          <span class="sr-only">{{this.starFivePer}}%</span>
                         </div>
                       </div>
                     </div>
@@ -82,8 +83,8 @@
                     <div class="col-xs-8 col-md-9">
                       <div class="progress">
                         <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="20"
-                          aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                          <span class="sr-only">60%</span>
+                          aria-valuemin="0" aria-valuemax="100" [ngStyle]="{'width.%':this.starFourPer }">
+                          <span class="sr-only">{{this.starFourPer}}%</span>
                         </div>
                       </div>
                     </div>
@@ -94,8 +95,8 @@
                     <div class="col-xs-8 col-md-9">
                       <div class="progress">
                         <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20"
-                          aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-                          <span class="sr-only">40%</span>
+                          aria-valuemin="0" aria-valuemax="100" [ngStyle]="{'width.%':this.starThreePer }">
+                          <span class="sr-only">{{this.starThreePer}}%</span>
                         </div>
                       </div>
                     </div>
@@ -106,8 +107,8 @@
                     <div class="col-xs-8 col-md-9">
                       <div class="progress">
                         <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="20"
-                          aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-                          <span class="sr-only">20%</span>
+                          aria-valuemin="0" aria-valuemax="100" [ngStyle]="{'width.%':this.starTwoPer }">
+                          <span class="sr-only">{{this.starTwoPer}}%</span>
                         </div>
                       </div>
                     </div>
@@ -118,8 +119,8 @@
                     <div class="col-xs-8 col-md-9">
                       <div class="progress">
                         <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80"
-                          aria-valuemin="0" aria-valuemax="100" style="width: 15%">
-                          <span class="sr-only">15%</span>
+                          aria-valuemin="0" aria-valuemax="100" [ngStyle]="{'width.%':this.starOnePer }">
+                          <span class="sr-only">{{this.starOnePer}}%</span>
                         </div>
                       </div>
                     </div>
