--- a/frontend/src/app/pages/userprofile/customerprofile/customerprofile.component.html
+++ b/frontend/src/app/pages/userprofile/customerprofile/customerprofile.component.html
@@ -58,10 +58,10 @@
                 </tr>
               </thead>
               <tbody>
-                <tr *ngFor="let x of current_user?.broadcasts">
-                  <td>{{x._id | slice:-4 }}</td>
-                  <td>{{x.name }}</td>
-                  <td scope="row">BC</td>
+                <tr *ngFor="let x of current_user?.broadcasts.slice(0, 5)">
+                  <td>{{x._id | slice:-4}}</td>
+                  <td>{{x.name}}</td>
+                  <td scope="row">{{x.tags}}</td>
                   <td scope="row">
                     <div class="social-description">
                       <a href="#button" class="btn btn-primary btn-lg btn-round btn-sm">A</a>
