--- a/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
+++ b/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
@@ -142,11 +142,10 @@
               </div>
               <div class="col-md-10">
                 <div class="clearfix"></div>
-                  
-                   
+                
           
-                 {{this.review}}<br><br>
-                 
+                <!-- <li *ngFor="let rating of Ratings"> {{rating[i].review}}</li><br><br> -->
+                 {{this.review}}<br>
                 <!-- <p>
                   <a class="float-right btn btn-outline-primary ml-2"> <i class="fa fa-reply"></i> Reply</a>
                 </p> -->
